# k8s-flask-helm-api

./: .dockerignore  CONSIDIRATIONS.md  Dockerfile  Flask-Api.postman_collection.json  INSTALLATION.md  README.md  app.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  skaffold.yaml
.github/workflows/: ci.yaml
argocd/: application.yaml
docs/: monitoring-and-logs.md
flask-api-chart/: Chart.yaml  values-local.yaml  values.yaml
flask-api-chart/templates/: _helpers.yaml  allow-prometheus.yaml  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  ingress.yaml  loki-dashboard.yaml  migration-job.yaml  network-policy.yaml  pvc.yaml  role.yaml  rolebinding.yaml  sealed-jwt-secret.yaml  sealed-mysql-secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
migrations/versions/: 15a050586529_add_email_index_to_users_table.py  295aae526d1c_initial_commit.py  395bae626e2d_add_users_table.py
scripts/: connect_db.sh  hpa_tester.sh  install.sh  setup-secrets.sh  setup.sh  setup_monitoring.sh
src/: __init__.py  factory.py  utils.py
src/api/v1/: __init__.py  routes.py  swagger.py
src/api/v1/controllers/: auth_controller.py  strings_controller.py
src/api/v1/middlewares/: auth_middleware.py
src/config/: config.py  dev_config.py  development.py  production.py  testing.py
src/core/: health.py  logging.py  metrics.py  security.py
src/core/models/: string.py  user.py
src/core/schemas/: auth.py  base.py  strings.py
src/core/services/: jwt_service.py
tests/: conftest.py  test_auth.py  test_security.py  test_strings.py  test_swagger.py
