[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-string-api"
version = "1.0.0"
description = "A Flask API for storing and retrieving strings with Kubernetes deployment"
authors = [
    {name = "Oguz Yilmaz", email = "oguz.yilmaz@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "flask==2.0.1",
    "werkzeug==2.0.1",
    "pathlib==1.0.1",
    "python-dotenv==0.19.1",
    "PyJWT==2.3.0",
    "Flask-SQLAlchemy==2.5.1",
    "sqlalchemy==1.4.23",
    "Flask-Migrate==3.1.0",
    "flask-bcrypt==0.7.1",
    "mysql-connector-python==8.0.26",
    "flask-swagger-ui==4.11.1",
    "gunicorn==20.1.0",
    "flask-limiter==3.5.0",
    "pydantic>=2.5.0",
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "mypy==1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/oguz-yilmaz/flask-string-api"
"Bug Tracker" = "https://github.com/oguz-yilmaz/flask-string-api/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "flask_swagger_ui.*",
    "flask_bcrypt.*",
    "flask_limiter.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
